Adding period support: ticks, M1, M5

--- a/FinamTicksDownloader/FinamTicksDownloader.csproj
+++ b/FinamTicksDownloader/FinamTicksDownloader.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Emitent.cs" />
     <Compile Include="EmitentHelper.cs" />
+    <Compile Include="Period.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebDownload.cs">
